fixed layout issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -464,6 +464,9 @@ main {
 .intro-text {
   text-align: center; }
 
+.about-me-text {
+  margin: 0 1em; }
+
 h2 {
   text-align: center; }
 
