--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -21,6 +21,10 @@ main {
   text-align: center;
 }
 
+.about-me-text {
+  margin: 0 1em;
+}
+
 h2 {
   text-align: center;
 }
